--- a/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
+++ b/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
@@ -1,5 +1,7 @@
 .video-gallary-column{
-    margin: 2% 6%;
+   margin-top: 10px;
+   padding: 30px;
+   background: #f3f7f5;
 }
  .video-gallary-column div iframe {
     width: 100%;
@@ -10,8 +12,8 @@
 /* MEDIA  */
  @media only screen and (min-width: 1440px) {
     .video-gallary-column{
-        margin: 2% 8%;
-        padding: 2%;
+        /* margin: 2% 8%; */
+        /* padding: 2%; */
         background: #ffffff;
         border-radius: 10px;
     }
