--- a/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
+++ b/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
@@ -1,16 +1,16 @@
 .advisor-council-container{
-    margin: 0% 10%;
+    /* margin: 0% 10%; */
     background: #195190FF;
     border-radius: 10px;
     margin-top: -25px;
-    padding-bottom: 30px;
+    padding: 0px 0px;
 }
 .advisor-council-container-para{
     font-size: 35px;
     font-weight: 600;
     font-style: italic;
     text-align: center;
-    padding: 20px;
+    padding: 20px 0px;
     color: #195190FF;
     background: #f3f7f5;
     border-top-left-radius: 10px;
@@ -21,7 +21,7 @@
     display: flex;
     justify-content: center;
     margin: 20px 0px;   
-    padding: 20px;
+    padding: 40px 0px;
 }
 .advisor-memberBtn button{
 color: #195190FF;  
