--- a/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
+++ b/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
@@ -1,7 +1,9 @@
 .executive-container{
-     margin: .5% 12%;
+     /* margin: .5% 12%; */
     overflow-x: hidden;
     border-radius: 10px;   
+    padding: 0px 0px;
+    margin-top: 10px;
    background:#f3f7f5;
 }
   .executive-container-para{
@@ -9,17 +11,17 @@
     font-size: 35px;
     font-style: italic;
     padding: 20px;
-    margin-top: 0px;
     background: #333D79FF;
         color: #FAEBEFFF;
         font-weight: bold;
     /* font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    margin-top: 0px;
     font-family:serif;
 } 
 .executive-memberBtn{
     display: flex;
     justify-content: center;
-    margin: 20px 0px;   
+    margin: 40px 0px;   
 }
 .executive-memberBtn button{
 color: #ffffff;  
