--- a/src/pages/Galllery/Gallary.css
+++ b/src/pages/Galllery/Gallary.css
@@ -1,6 +1,6 @@
 .gallary-container{
     /* background: #ffffff; */
-    margin: 0px 50px;
+    margin-top: -15px;
 }
 .gallary-event-img{
     margin: 0% 7%;
@@ -12,8 +12,7 @@
 .gallary-event-img h3 {
     /* padding: 40px 0px ; */
     padding: 30px 0px;
- /* background: #606060FF; */
- background: rgba(96,96,96,.5);
+ background: #606060FF;
     text-align: center;
     font-size: 30px;
     font-weight: bold;
