--- a/src/pages/YoungCongress/YCProgram/YCProgram.css
+++ b/src/pages/YoungCongress/YCProgram/YCProgram.css
@@ -1,14 +1,7 @@
  .ycprogram{
-     margin: .5% 10%;
      background: #f7f3f5;    
 border-radius: 10px !important;
-padding: 50px 20px;
-
+margin-top: 10px;
  }
 
-
- @media screen and (min-width: 1440px) {
-   .ycprogram{
-      margin: .5% 18%;
-   }
- }
+ 
