--- a/src/component/Home/ExecutiveCommitteeMembers/ExecutiveCommitteeMembers.css
+++ b/src/component/Home/ExecutiveCommitteeMembers/ExecutiveCommitteeMembers.css
@@ -9,10 +9,11 @@
 .cabinateMemberCard{
     /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
     box-shadow: rgba(149, 157, 165, 0.2) 0px 6px 6px;
+    /* background-color: #BCDFFF */
     /* box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px; */
 }
 .cabinateMemberImgHolder img{
     width: 100%;
-    max-height: 310px;
+    max-height: 340px;
     border-radius: 7px;
 }
