exclusive events css refactored for #27

--- a/src/component/Home/ExclusiveEvent/ExclusiveEvent.css
+++ b/src/component/Home/ExclusiveEvent/ExclusiveEvent.css
@@ -6,3 +6,12 @@
     /* margin: 20px 0px; */
     padding-bottom: 3rem;
 }
+
+@media screen and (max-width: 380px) {
+    .eventHeaderTextOnHome{
+        font-size: 1.5rem !important ;
+    }
+    .eventHeaderSupportTextOnHome{
+        font-size: 1.1rem !important ;
+    }
+}
