--- a/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
+++ b/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
@@ -1,7 +1,22 @@
+.video-Gallary{
+   background: #f3f7f5;
+   margin-top: 10px;
+   padding: 30px;
+   padding-top: 20px !important;
+   border-radius: 10px;
+}
 .video-gallary-column{
    margin-top: 10px;
    padding: 30px;
-   background: #f3f7f5;
+}
+.video-gallary-row h3{
+   background-color: #FCF6F5FF;
+   padding: 30px;
+   font-size: 30px;
+   color:  #333D79FF;
+   border-bottom: 1px solid #333D79FF;
+   border-style:dotted;
+   text-align: center;
 }
  .video-gallary-column div iframe {
     width: 100%;
