--- a/src/component/About/Founder/Founder.css
+++ b/src/component/About/Founder/Founder.css
@@ -1,8 +1,8 @@
 .nrbFounderDiv {
   background-color: rgb(228, 219, 208);
   border-radius: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
 }
 
 .founder-title {
