--- a/src/component/About/Intro/Intro.css
+++ b/src/component/About/Intro/Intro.css
@@ -1,8 +1,8 @@
 .nrbAboutIntro {
   background-color: rgb(221, 228, 226);
   border-radius: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
   padding-bottom: 3rem;
 }
 .nrbIntro-title {
