--- a/src/component/About/Mission/Mission.css
+++ b/src/component/About/Mission/Mission.css
@@ -1,8 +1,8 @@
 .mission-div {
   background-color: white;
   border-radius: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
 }
 .mision-title {
   font-family: museo-sans, sans-serif;
@@ -37,8 +37,6 @@
   line-height: 25px;
   font-size: 17px;
   font-weight: 400;
-}
-.valuesContent {
 }
 
 .missionIcon {
