--- a/src/component/About/Objective/Objective.css
+++ b/src/component/About/Objective/Objective.css
@@ -1,7 +1,7 @@
 .nrbObjectiveDiv {
   border-radius: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
   padding-bottom: 3rem;
 }
 
@@ -26,7 +26,7 @@
   font-weight: 800;
 }
 .objectiveImg {
-  border-radius: 20px;
+  border-radius: 12px;
 }
 
 @media only screen and (max-width: 991px) {
@@ -52,6 +52,8 @@
   }
   .objectiveImg {
     height: auto;
+    margin-top: 15px;
+    margin-left: 5px;
   }
   .objective-value {
     text-align: justify;
