--- a/src/component/About/Vission/Vision.css
+++ b/src/component/About/Vission/Vision.css
@@ -1,8 +1,8 @@
 .nrbvision-div {
   background-color: white;
   border-radius: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
+  /* margin-left: 30px;
+  margin-right: 30px; */
 }
 .visionTitle::after {
   content: "";
@@ -29,14 +29,19 @@
   line-height: 27px;
   font-weight: 400;
 }
-
-@media only screen and (max-width: 768px) {
+.nrbVisionIcon {
+  font-size: 1.8em;
+  color: #1f272e;
 }
+
 @media only screen and (max-width: 500px) {
   .vision-details {
     text-align: justify;
   }
   .nrbVisionImg {
     height: auto;
+  }
+  .nrbVisionIcon {
+    font-size: 1.2em;
   }
 }
