--- a/src/component/Blogs/BlogDetails/BlogDetailsCard.css
+++ b/src/component/Blogs/BlogDetails/BlogDetailsCard.css
@@ -1,5 +1,5 @@
 .blogDetailsPageContainer {
-  background-color: rgb(207, 248, 234);
+  background-color: rgb(238, 245, 243);
   border-radius: 12px;
 }
 .blogDetailsTitle {
@@ -16,7 +16,7 @@
 }
 
 .blogDetailsImg {
-  border-radius: 12px;
+  /* border-radius: 12px; */
   height: 500px;
 }
 .blogOverview {
