--- a/src/component/Blogs/BlogPage/BlogPage.css
+++ b/src/component/Blogs/BlogPage/BlogPage.css
@@ -13,7 +13,10 @@
 .BlogImgContainer,
 .BlogImgContainer img {
   height: 280px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
+
 .blogPageDetails {
   background-color: #f7f8fa;
   color: #002c53;
