--- a/src/component/Blogs/BlogDetails/BlogDetailsCard.css
+++ b/src/component/Blogs/BlogDetails/BlogDetailsCard.css
@@ -30,6 +30,9 @@
   border-bottom: 6px solid #f08a55;
   margin-top: 0.6em;
 }
+.socialMediaIocn:hover {
+  color: black;
+}
 
 @media only screen and (max-width: 991px) {
   .blogDetailsTitle {
