--- a/src/component/Header/MenuList/Dropdown/Dropdown.css
+++ b/src/component/Header/MenuList/Dropdown/Dropdown.css
@@ -35,7 +35,32 @@
   
   @media screen and (max-width: 960px) {
     .fa-caret-down {
-      display: none;
+      margin-left: .5rem;
     }
+
+    /* for the responsiveness in footer  code starts*/
+    .dropdown-menu {
+      background: rgb(130, 192, 216);
+      width: 100%;
+      position: relative;
+      top: 0;
+      list-style: none;
+      text-align: start;
+      padding-inline-start: 15px !important;
+      font-size: 1rem !important;
+      border-top: 3px solid orange;
+      z-index: 99;
+  }
+  .nav-item {
+    display: flex;
+    align-items: center;
+    height: max-content;
+    flex-direction: column;
+  }
+  
+  .nav-menu{
+    justify-content: space-evenly;
+  }
+  /* for the responsiveness in footer  code ends*/
   }
   
