added bg in acitvity page

--- a/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
+++ b/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
@@ -232,7 +232,11 @@ font-weight: bold;
         }
      
 }
-
+@media only screen and (max-width:580px){
+    .ycativity-bloodImg, .ycativity-foodImg, .ycativity-floodImg, .ycativity-naturaldisasterImg {
+        width: 100% !important;
+    }
+}
     /* .ycativity-bloodImg img{
         width: 400px;
         height: 400px;
