--- a/src/pages/YoungCongress/YCActivities/YCAtivities.css
+++ b/src/pages/YoungCongress/YCActivities/YCAtivities.css
@@ -1,3 +1,11 @@
  .YCAtivities{
-    background: #000;
+    /* background: #000; */
  }
+ @media only screen and (max-width:580px){
+    .YCAtivities{
+        /* background: rgb(168, 196, 44); */
+        width:98%;
+        margin-left: -5px;
+     }
+    
+}
