young-congress/programm responsiveness fixes

--- a/src/pages/YoungCongress/YCProgram/YCProgram.css
+++ b/src/pages/YoungCongress/YCProgram/YCProgram.css
@@ -1,8 +1,8 @@
  .ycprogram{
      background: #f7f3f5;    
+     /* background: rgb(114, 184, 3); */
 border-radius: 10px !important;
 margin-top: 10px;
-padding: 20px 0px;
  }
-
+ 
  
