--- a/src/component/YoungCongress/YCProgram/YCProgramStyle.css
+++ b/src/component/YoungCongress/YCProgram/YCProgramStyle.css
@@ -121,8 +121,9 @@ border-radius: 10px !important;
 .ycprogram-slide-img img{
     width: 100%;
     object-fit: cover;   
-    padding: 10px 0px 0px 0px;
+    padding: 30px 0px 0px 0px;
     border-radius: 10px !important;     
+    border-top-left-radius: 30px;
 }
 .ycprogram-slide-title{
     font-size: 30px !important;
