--- a/src/component/YoungCongress/YCMembers/YCMembersStyle.css
+++ b/src/component/YoungCongress/YCMembers/YCMembersStyle.css
@@ -16,11 +16,11 @@
    background: #f3f7f5;
    border-radius: 10px !important;
  /* border-top-left-radius: 30px ; */
+ margin: 10px;
  }
  .ycm-header{ 
 background: #f3f7f5;
 border-radius: 10px !important;
-
  }
  .ycm-header h2 {
     font-size: 32px;
@@ -46,7 +46,11 @@ border-radius: 10px !important;
  }  */
   .ycm {
    padding:10px 0px;
+   /* background: rgb(50, 119, 36); */
   }
+  /* .ycm-profile{
+   background: #000;
+  } */
  .ycm-card{
     /* padding: 20px; */
      box-shadow: none;
@@ -94,3 +98,13 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 10px !important;
     padding: 8px;
  } */
+
+ @media only screen and (max-width:768px){  
+   .ycm-card{
+      width: 100% !important;
+   }
+     .ycm-profile{
+     width: 100%;
+     padding: 20px;
+     } 
+ }
