--- a/src/pages/Commitees/CabinateMembers/CabinateMembers.css
+++ b/src/pages/Commitees/CabinateMembers/CabinateMembers.css
@@ -41,4 +41,8 @@ margin-top: 5px;
 
 }
 
- 
+ @media only screen and (max-width:580px){
+    .cabinetcontainer{       
+        background:none;      
+    } 
+ }
