--- a/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
+++ b/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
@@ -2,6 +2,9 @@
    background:#f3f7f5;
    padding: 30px;
     /* margin: 50px 100px; */
+    border-bottom-left-radius: 10px;
+    margin-top: -35px;
+    border-bottom-right-radius: 10px;
     }  
      /* .executive-ambassador{
       width: 100%;
