--- a/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
+++ b/src/pages/Commitees/AdvisoryCouncil/AdvisorCouncil.css
@@ -15,7 +15,6 @@
     background: #f3f7f5;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-
 }
 .advisor-memberBtn{
     display: flex;
@@ -30,16 +29,17 @@ border: none;
 }
 
 /* MEDIA  */
-@media only screen and (max-width:1216px){
+ 
+ @media only screen and (max-width:575px){
     .advisor-council-container{
-        margin: 0% 10%;
-    margin-top: -25px;
-      
+        background: none;
+        margin-top: 5px;
     }
-}
-@media only screen and (max-width:575px){
-    .advisor-council-container{
-        margin: 0% 1%;
-  
+    .advisor-council-container-para{
+        margin: 0px 5px;
     }
-}
+    .advisor-memberBtn{
+     background: #195190FF;
+     margin: 0px 5px;
+    }
+ }
