--- a/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
+++ b/src/component/Commitees/ExecutiveAmbassador/ExecutiveAmbassadorProfile.css
@@ -65,3 +65,11 @@ letter-spacing: .7px;
        font-size: 10px !important;
        padding: 8px;
     } */
+
+    @media only screen and (max-width:575px){
+      .executive-ambassador-container{
+          /* margin: 50px 100px; */
+          border-bottom-left-radius: 0px;
+          border-bottom-right-radius: 0px;
+          }  
+    }
