--- a/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
+++ b/src/pages/Commitees/ExecutiveAmbassador/ExecutiveAmbassador.css
@@ -38,4 +38,13 @@ border: none;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
     }
+    .executive-memberBtn{
+        background: #f3f7f5;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        padding: 30px 0px;
+        margin-top: -20px;
+        
+    }
+     
 }
