--- a/src/component/About/Objective/Objective.css
+++ b/src/component/About/Objective/Objective.css
@@ -1,7 +1,6 @@
 .nrbObjectiveDiv {
+  background-color: #f3f7f5;
   border-radius: 10px;
-  /* margin-left: 30px;
-  margin-right: 30px; */
   padding-bottom: 3rem;
 }
 
