--- a/src/component/About/Counter/Counter.css
+++ b/src/component/About/Counter/Counter.css
@@ -1,8 +1,9 @@
 .counterDiv {
   background-color: #f5f5f5;
+  margin-left: 33px;
+  margin-right: 33px;
   border-radius: 10px;
 }
-
 .counter {
   font-family: poppins, sans-serif;
   font-style: normal;
@@ -10,7 +11,7 @@
   font-size: 50px;
   line-height: 96px;
   text-align: center;
-  color: #e8cc16;
+  color: #f5a30b;
 }
 .counterText {
   color: #195283;
