--- a/src/component/About/Intro/Intro.css
+++ b/src/component/About/Intro/Intro.css
@@ -1,5 +1,5 @@
 .nrbAboutIntro {
-  background-color: rgb(221, 228, 226);
+  background-color: #efeded;
   border-radius: 10px;
   /* margin-left: 30px;
   margin-right: 30px; */
