--- a/src/component/About/Mission/Mission.css
+++ b/src/component/About/Mission/Mission.css
@@ -1,5 +1,5 @@
 .mission-div {
-  background-color: white;
+  background-color: #e9f2fb;
   border-radius: 10px;
   /* margin-left: 30px;
   margin-right: 30px; */
