--- a/src/component/Events/EventPage/EventCard/EventCard.css
+++ b/src/component/Events/EventPage/EventCard/EventCard.css
@@ -15,6 +15,8 @@
 
 .eventImgCard,
 .eventImgCard img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   height: 260px;
 }
 .eventCardDetails {
