gallary/photo-gallary and gallary/video-gallary responsiveness fixes

--- a/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
+++ b/src/component/Galllery/VideoGallery/VideoGallaryGrid.css
@@ -10,13 +10,35 @@
    padding: 30px;
 }
 .video-gallary-row h3{
-   background-color: #FCF6F5FF;
+   background-color: #15133C;
    padding: 30px;
    font-size: 30px;
-   color:  #333D79FF;
-   border-bottom: 1px solid #333D79FF;
-   border-style:dotted;
+   border-radius: 10px;
+   color:  #fff;
    text-align: center;
+   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+/* .video-gallary-row h3 span{
+   border-bottom: 1px solid #FFDE00;   
+   border-collapse: 30px;
+} */
+.video-gallary-row h3 span::before{   
+   content:" ";
+   width: 300px;
+   height: 100%;
+   border-right: 5px solid rgb(50, 197, 50);
+   /* top: 0; */
+   margin-right: 20px;
+   /* padding: 20px ; */
+}
+.video-gallary-row h3 span::after{   
+   content:" ";
+   width: 300px;
+   height: 100%;
+   border-right: 5px solid rgb(50, 197, 50);
+   /* top: 0; */
+   margin-left: 20px;
+   /* padding: 20px ; */
 }
  .video-gallary-column div iframe {
     width: 100%;
@@ -40,4 +62,13 @@
     .video-gallary-column div iframe {
    height: 250px;
      }
+  }
+
+  @media only screen and (max-width:575px){
+   .video-Gallary{
+ background: none;
+   }
+   .video-gallary-row{
+      background: #f3f7f5;
+   }
   }
