--- a/src/component/About/Objective/Objective.css
+++ b/src/component/About/Objective/Objective.css
@@ -25,6 +25,7 @@
   font-weight: 800;
 }
 .objectiveImg {
+  width: 450px;
   border-radius: 12px;
 }
 
@@ -50,9 +51,10 @@
     font-weight: 800;
   }
   .objectiveImg {
-    height: auto;
-    margin-top: 15px;
-    margin-left: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
   }
   .objective-value {
     text-align: justify;
