--- a/src/component/About/Counter/Counter.css
+++ b/src/component/About/Counter/Counter.css
@@ -1,6 +1,8 @@
 .counterDiv {
   background-color: #f5f5f5;
   border-radius: 12px;
+  margin-left: 1px;
+  margin-right: 1px;
 }
 .counter {
   font-family: poppins, sans-serif;
