--- a/src/component/About/Objective/Objective.css
+++ b/src/component/About/Objective/Objective.css
@@ -25,7 +25,7 @@
   font-weight: 800;
 }
 .objectiveImg {
-  width: 450px;
+  height: 450px;
   border-radius: 12px;
 }
 
@@ -51,10 +51,7 @@
     font-weight: 800;
   }
   .objectiveImg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 400px;
+    height: auto;
   }
   .objective-value {
     text-align: justify;
