--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=DynaPuff&family=Inter&family=Rubik:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=DynaPuff&family=Inter&family=Noto+Sans&family=Rubik:wght@400;700&display=swap");
+
+/* newly added :
+font-family: 'Noto Sans', sans-serif; */
+
 /* css made for container  */
 .p-container,
 .p-container-fluid,
