--- a/src/component/About/Intro/Intro.css
+++ b/src/component/About/Intro/Intro.css
@@ -2,7 +2,7 @@
   border-radius: 10px;
 }
 .nrbAboutIntro {
-  background-color: #e2e5f2;
+  background-color: #f1f2f6;
   border-radius: 10px;
   /* margin-left: 30px;
   margin-right: 30px; */
