--- a/src/component/About/Vission/Vision.css
+++ b/src/component/About/Vission/Vision.css
@@ -36,7 +36,7 @@
     text-align: justify;
   }
   .nrbVisionImg {
-    height: auto;
+    height: 300px;
   }
   .nrbVisionIcon {
     font-size: 1.2em;
