--- a/src/component/Galllery/PhotoGallery/PhotoGallaryGrid.css
+++ b/src/component/Galllery/PhotoGallery/PhotoGallaryGrid.css
@@ -8,38 +8,14 @@
     border-radius: 10px;
 } 
 .photo-gallary-row h3{
-    /* background-color: #FCF6F5FF; */
-    background: #5BB318;
+    background-color: #FCF6F5FF;
     padding: 30px;
     font-size: 30px;
-    color: #fff;
-    /* border-bottom: 1px solid #2BAE66FF; */
-    /* border-style:dotted; */
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    color: #2BAE66FF;
+    border-bottom: 1px solid #2BAE66FF;
+    border-style:dotted;
     text-align: center;
-    border-radius: 10px;
 }
-/* .photo-gallary-row h3 span{
-    border-bottom: 1px solid #FFDE00;   
-} */
-.photo-gallary-row h3 span::before{   
-    content:" ";
-    width: 300px;
-    height: 100%;
-    border-right: 5px solid #FFDE00;
-    /* top: 0; */
-    margin-right: 20px;
-    /* padding: 20px ; */
- }
- .photo-gallary-row h3 span::after{   
-    content:" ";
-    width: 300px;
-    height: 100%;
-    border-right: 5px solid #FFDE00;
-    /* top: 0; */
-    margin-left: 20px;
-    /* padding: 20px ; */
- }
 .phtoto-gallary-column img{
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 border-radius:10px; 
