--- a/src/component/Events/EventPage/EventCard/EventCard.css
+++ b/src/component/Events/EventPage/EventCard/EventCard.css
@@ -1,3 +1,7 @@
+.eventCardDiv {
+  background-color: #e5f0f8;
+  border-radius: 12px;
+}
 .event-title {
   font-family: "Barlow Condensed", sans-serif;
   color: #0b69bc;
