event slider page responsive done

--- a/src/component/Events/EventPage/EventCard/EventCard.css
+++ b/src/component/Events/EventPage/EventCard/EventCard.css
@@ -24,7 +24,7 @@
   height: 260px;
 }
 .eventCardDetails {
-  background-color: #212529;
+  background-color: #34373b;
   color: white;
   padding: 1.2rem 1.2rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
