--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
  --primeBLue : #1D354F;
  --btnColor : #6A55EA;
  --primeHalka : #274463;
+ --bg-orange: #FF7901;
 }
 
 /* to implement color from root , follow below example: 
