--- a/src/component/About/Vission/Vision.css
+++ b/src/component/About/Vission/Vision.css
@@ -1,44 +1,24 @@
-.nrbvision-div {
-  background-color: white;
+.nrbVission-div {
+  /* background-color: white; */
   border-radius: 10px;
+  font-family: 'Noto Sans', sans-serif;
   /* margin-left: 30px;
   margin-right: 30px; */
 }
-.visionTitle::after {
-  content: "";
-  display: block;
-  width: 4em;
-  max-width: 10%;
-  border-bottom: 6px solid #f08a55;
-  /* margin-top: 0.6em; */
-  margin: auto;
-  padding-top: 15px;
+.visionTextHeader{
+  color: var(--bg-orange);
+}
+.visionImgContainer img{
+  width: 100%;
 }
 
-.nrbVisionImg {
-  border-radius: 12px;
-  height: 500px;
-}
-.vision-details {
-  font-family: lora, sans-serif;
-  color: #182934;
-  font-size: 17px;
-  line-height: 27px;
-  font-weight: 400;
-}
-.nrbVisionIcon {
-  font-size: 1.8em;
-  color: #1f272e;
-}
-
-@media only screen and (max-width: 500px) {
-  .vision-details {
-    text-align: justify;
-  }
-  .nrbVisionImg {
-    height: 300px;
-  }
-  .nrbVisionIcon {
-    font-size: 1.2em;
-  }
+.visionText{
+  /* background-color: rgb(171, 210, 243); */
+  background-color: #eaf1f8;;
+  border-radius: 10px;
+  text-align: justify;
+  text-justify: inter-word;
+  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;  */
+  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;  */
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
 }
