--- a/src/component/About/Founder/Founder.css
+++ b/src/component/About/Founder/Founder.css
@@ -6,7 +6,7 @@
 }
 
 .founder-title {
-  font-family: museo-sans, sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   color: #195283;
   font-size: 38px;
   line-height: 44px;
