--- a/src/component/About/Intro/Intro.css
+++ b/src/component/About/Intro/Intro.css
@@ -9,7 +9,7 @@
   padding-bottom: 3rem;
 }
 .nrbIntro-title {
-  font-family: museo-sans, sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   color: #195283;
   font-size: 38px;
   line-height: 44px;
