--- a/src/component/About/Mission/Mission.css
+++ b/src/component/About/Mission/Mission.css
@@ -5,7 +5,7 @@
   margin-right: 30px; */
 }
 .mision-title {
-  font-family: museo-sans, sans-serif;
+  font-family: "Barlow Condensed", sans-serif;
   color: #195283;
   font-size: 38px;
   line-height: 44px;
