--- a/src/component/About/Vission/Vision.css
+++ b/src/component/About/Vission/Vision.css
@@ -4,6 +4,9 @@
   /* margin-left: 30px;
   margin-right: 30px; */
 }
+.visionTitle {
+  font-family: "Barlow Condensed", sans-serif;
+}
 .visionTitle::after {
   content: "";
   display: block;
