--- a/src/component/About/Counter/Counter.css
+++ b/src/component/About/Counter/Counter.css
@@ -1,5 +1,5 @@
 .counterDiv {
-  background-color: #f5f5f5;
+  background-color: #EAF1F8;
   border-radius: 12px;
   margin-left: 1px;
   margin-right: 1px;
