background color changed from cde3f5 to ffffff

--- a/src/component/About/Vission/Vision.css
+++ b/src/component/About/Vission/Vision.css
@@ -14,7 +14,8 @@
 
 .visionText{
   /* background-color: rgb(171, 210, 243); */
-  background-color: #eaf1f8;;
+  /* background-color: #eaf1f8; */
+  background-color: #FFFFFF;
   border-radius: 10px;
   text-align: justify;
   text-justify: inter-word;
