--- a/src/component/Home/ExclusiveEvent/ExclusiveEvent.css
+++ b/src/component/Home/ExclusiveEvent/ExclusiveEvent.css
@@ -1,7 +1,7 @@
 .eventSummery{
-    /* padding: 2rem;
-    background-color: #FFFFFF; */
-    background-color: #e5f0f8;
+    /* padding: 2rem; */
+    background-color: #FFFFFF; 
+    /* background-color: #e5f0f8; */
     border-radius: 10px;
     /* margin: 20px 0px; */
     padding-bottom: 3rem;
