--- a/src/component/Home/TopServices/TopService.css
+++ b/src/component/Home/TopServices/TopService.css
@@ -1,5 +1,6 @@
 .topServiceContainer{
-    background-color: #FAF6F7;
+    /* background-color: #FAF6F7; */
+    background-color: #FFFFFF;
     border-radius: 10px;
     /* margin: 20px 0px; */
     padding-bottom: 3rem;
