--- a/src/component/About/Mission/Mission.css
+++ b/src/component/About/Mission/Mission.css
@@ -8,7 +8,8 @@
 
 .gridColumnMission{
   /* background-color: rgb(171, 210, 243); */
-  background-color: #eaf1f8;
+  /* background-color: #eaf1f8; */
+  background-color: #FFFFFF;
   border-radius: 10px;
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;  */
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
