--- a/src/component/About/MoreInfo/Morinfo.css
+++ b/src/component/About/MoreInfo/Morinfo.css
@@ -4,7 +4,8 @@
 
 .moreInfoOfAbout{
     border: 4px solid #183462;
-    background-color: #EAF1F8;
+    /* background-color: #EAF1F8; */
+    background-color: #FFFFFF;
     min-height: 434px;
 }
 
@@ -14,13 +15,15 @@
 
 .moreInfoImgContainer{
     border: 4px solid #183462;
-    background-color: #EAF1F8;
+    /* background-color: #EAF1F8; */
+    background-color: #FFFFFF;
 }
 .moreInfoImgContainer img{
     width: 100%;
 }
 
 .thankMessageAbout{
-    background-color: #EAF1F8;
+    /* background-color: #EAF1F8; */
+    background-color: #FFFFFF;
     border-radius: 10px;
 }
