--- a/src/component/Commitees/CabinateMembers/CabinateCard.css
+++ b/src/component/Commitees/CabinateMembers/CabinateCard.css
@@ -2,21 +2,26 @@
     border-radius: 10px;
     padding: 30px 0px;
     /* background: #f3f7f5; */
-    background: #f3f7f3;
+    /* background: #f3f7f3; */
+    /* background: #ffffff; */
  }
  .cabinate-card{
     width: 300px !important;
     height: auto;
     /* background: #333; */
     /* background: #567572FF; */
-    background: #064663;
+    /* background: #064663; */
+    background: #ffffff;
     /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
-    color: #f3f7f5;
+    /* box-shadow: rgba(27, 27, 27, 0.25) 5px 6px 30px -2px; */
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    /* color: #f3f7f5; */
+    color: var(--primeBLue);
  }
  .cabinate-card-ceo-img img{
     width: 100%;
     border-radius: 10px;
+    min-height: 240px;
  }
  
  
