--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,6 +1,7 @@
 .navbar {
     /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
-    background: #cde3f5;
+    /* background: #cde3f5; */
+    background: #FFFFFF;
     /* color: #cde3f5; */
     height: 80px;
     display: flex;
