--- a/src/component/Home/ExecutiveCommitteeMembers/ExecutiveCommitteeMembers.css
+++ b/src/component/Home/ExecutiveCommitteeMembers/ExecutiveCommitteeMembers.css
@@ -1,7 +1,8 @@
 .executiveCommitteMemberHomeContainer{
     /* padding: 2rem;
     background-color: #FFFFFF; #FAF6F7 */
-    background-color: #fafafa;
+    /* background-color: #fafafa; */
+    background-color: #FFFFFF;
     border-radius: 10px;
     /* margin: 20px 0px; */
     padding-bottom: 3rem;
