--- a/src/component/Home/WhyJoinHome/WhyJoinHome.css
+++ b/src/component/Home/WhyJoinHome/WhyJoinHome.css
@@ -1,7 +1,7 @@
 .sectionWhyContainer{
-    /* padding: 2rem;
-background-color: #FFFFFF; */
-background-color: #FAF6F7;
+    /* padding: 2rem; */
+background-color: #FFFFFF;
+/* background-color: #FAF6F7; */
 border-radius: 10px;
 /* margin: 20px 0px; */
 padding-bottom: 3rem;
