--- a/src/pages/Commitees/CabinateMembers/CabinateMembers.css
+++ b/src/pages/Commitees/CabinateMembers/CabinateMembers.css
@@ -1,7 +1,8 @@
 .cabinetcontainer{
     /* padding: 15px; */
     overflow-x: hidden;
-    background: #f3f7f5;
+    /* background: #f3f7f5; */
+    /* background: #f5f5f4; */
     border-radius: 10px;
 margin-top: 5px;
 } 
