young-congress/program page slide refectored

--- a/src/component/YoungCongress/YCProgram/YCProgramStyle.css
+++ b/src/component/YoungCongress/YCProgram/YCProgramStyle.css
@@ -13,7 +13,8 @@
 .ycpc-flex1 h1{
     font-size: 22px;
     font-size: 20px; 
-    font-style: italic;
+    /* font-style: italic; */
+    line-height: 15px;
 }
  
 .ycpc-header-flex p{
