--- a/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
+++ b/src/component/YoungCongress/YCActivities/YCAtivitesStyle.css
@@ -2,7 +2,7 @@
 .ycativity-header h1{
     text-align: center;
     font-size: 35px;
-    font-style: italic;
+    /* font-style: italic; */
     padding: 10px 0px;
     font-weight: bold;
 }
@@ -53,7 +53,7 @@
         position: relative;
         /* color: #ffffff;    */
         color: #ffffff;
-        font-size: 20px;
+        font-size: 20px;        
         opacity: 1 !important;    
         letter-spacing: 1px;
     }
@@ -64,8 +64,8 @@
         opacity: 1 !important;     
         font-size: 15px;
       letter-spacing: .5px;
+      font-weight: 500;
       color: #ffffff;
- font-weight: bold;
     }
     .ycativity-foodImg {     
         background-image: url('../../../assets/image/YCAbout/foodDistribution.jpg');  
@@ -128,7 +128,7 @@
     }
     .ycativity-naturaldisaster-bg-bottom{
         position: absolute;
-        background: rgb(31, 230, 5);
+        background: rgb(31, 243, 3);
         opacity: .5;
         width: 100%;   
         height: 130px ;
@@ -166,7 +166,7 @@ display: none;
         font-size: 15px;
       letter-spacing: .8px;
       color: #000;
-font-weight: bold;
+font-weight: 500;
     }
     .ycativity-floodImg {
         background-image: url('../../../assets/image/YCAbout/the\ flood.jpeg');  
@@ -211,6 +211,7 @@ font-weight: bold;
         opacity: 1 !important;     
         font-size: 15px;
       letter-spacing: 1px;
+      font-weight: 500;
 
     }
 /* @media  */
